# MiroThinker

./: .dockerignore  BOUNDARY_CONTROL.md  DOCKER_GUIDE.md  FRAMEWORK_ANALYSIS.md  SYSTEM_PROMPTS.md  build-k8s.sh  daemon.json.example  docker-compose.yml  docker-launch.sh  quickstart.sh  start-all.sh  提示词备份.md
apps/api-server/: .dockerignore  .gitignore  API_FORMAT.md  API_FORMAT_V2.md  API_RESPONSE_EXAMPLE.json  API_VERSIONS.md  ARCHITECTURE.md  BUILD_GUIDE.md  CHANGELOG_API_FORMAT.md  CHANGELOG_V2.md  CHANGELOG_V2_API.md  CONCURRENCY.md  CONTEXT_MANAGEMENT.md  Dockerfile  EXAMPLE_CURL_TEST.sh  FIXES_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  REBUILD_INSTRUCTIONS.md  benchmark_concurrency.py  docker-compose.yml  main.py  nginx.conf  pyproject.toml  start.sh  边思考边检索流数据.md  边搜边思考存储.md
apps/api-server/routers/: chat.py
apps/api-server/services/: __init__.py  concurrency_manager.py  context_manager.py  data_filter.py  openai_adapter.py  openai_adapter_v2.py  pipeline_manager.py  stream_handler.py
apps/gradio-demo/: Dockerfile  env.txt  main.py
apps/miroflow-agent/: main.py
apps/miroflow-agent/conf/agent/: quick_demo.yaml
apps/miroflow-agent/conf/llm/: gpt.yaml  mirothinker.yaml  qwen-3.yaml
apps/miroflow-agent/src/config/: settings.py
apps/miroflow-agent/src/core/: answer_generator.py  orchestrator.py  pipeline.py  tool_executor.py
apps/miroflow-agent/src/io/: input_handler.py  output_formatter.py
apps/miroflow-agent/src/llm/: base_client.py
k8s/: api-server-deployment.yaml  configmap.yaml  mirothinker-web.yaml
nginx/: nginx.conf
(+6 files in other folders)
